--- a/shop.html
+++ b/shop.html
@@ -15,13 +15,157 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
   <style>
+    /* Update border styles */
+    :root {
+      --border-color: rgba(0, 0, 0, 0.08);
+      --border-radius-sm: 6px;
+      --border-radius-md: 8px;
+      --border-radius-lg: 12px;
+      --border-radius-xl: 16px;
+      --border-width: 1px;
+      --border-width-thick: 2px;
+    }
+
+    /* Table section borders */
     .table-section {
       background: var(--card-bg);
-      border-radius: 12px;
+      border-radius: var(--border-radius-lg);
       padding: 1.25rem;
-      border: 1px solid var(--border-color);
+      border: var(--border-width) solid var(--border-color);
       margin-bottom: 1.25rem;
       overflow-x: auto;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
+    }
+
+    /* Card borders */
+    .stat-card,
+    .readiness-card,
+    .invoice-stat-card,
+    .reminder-card {
+      border: var(--border-width) solid var(--border-color);
+      border-radius: var(--border-radius-md);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.03);
+    }
+
+    /* Table borders */
+    .table {
+      border-collapse: separate;
+      border-spacing: 0;
+    }
+
+    .table > :not(caption) > * > * {
+      border-bottom: var(--border-width) solid var(--border-color);
+    }
+
+    .table > :not(caption) > *:last-child > * {
+      border-bottom: none;
+    }
+
+    /* Button borders */
+    .btn {
+      border-radius: var(--border-radius-sm);
+      border-width: var(--border-width);
+    }
+
+    .btn-group .btn {
+      border-radius: 0;
+    }
+
+    .btn-group .btn:first-child {
+      border-top-left-radius: var(--border-radius-sm);
+      border-bottom-left-radius: var(--border-radius-sm);
+    }
+
+    .btn-group .btn:last-child {
+      border-top-right-radius: var(--border-radius-sm);
+      border-bottom-right-radius: var(--border-radius-sm);
+    }
+
+    /* Input borders */
+    .form-control,
+    .form-select {
+      border-radius: var(--border-radius-sm);
+      border-width: var(--border-width);
+    }
+
+    .input-group .form-control,
+    .input-group .form-select {
+      border-radius: 0;
+    }
+
+    .input-group .form-control:first-child,
+    .input-group .form-select:first-child {
+      border-top-left-radius: var(--border-radius-sm);
+      border-bottom-left-radius: var(--border-radius-sm);
+    }
+
+    .input-group .form-control:last-child,
+    .input-group .form-select:last-child {
+      border-top-right-radius: var(--border-radius-sm);
+      border-bottom-right-radius: var(--border-radius-sm);
+    }
+
+    /* Badge borders */
+    .badge {
+      border-radius: var(--border-radius-sm);
+      border: var(--border-width) solid transparent;
+    }
+
+    /* Dropdown borders */
+    .dropdown-menu {
+      border-radius: var(--border-radius-md);
+      border: var(--border-width) solid var(--border-color);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
+
+    /* Icon borders */
+    .shop-icon,
+    .readiness-icon,
+    .invoice-stat-icon {
+      border-radius: var(--border-radius-sm);
+      border: var(--border-width) solid transparent;
+    }
+
+    /* Section borders */
+    .reminder-header {
+      border-bottom: var(--border-width) solid var(--border-color);
+    }
+
+    /* Hover effects */
+    .table tbody tr:hover {
+      background: var(--background-color);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    }
+
+    .btn:hover {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    }
+
+    /* Focus states */
+    .form-control:focus,
+    .form-select:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 0.2rem rgba(79, 70, 229, 0.1);
+    }
+
+    /* Active states */
+    .btn.active {
+      border-color: var(--primary-color);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      .table-section {
+        border-radius: var(--border-radius-md);
+        padding: 1rem;
+      }
+
+      .stat-card,
+      .readiness-card,
+      .invoice-stat-card {
+        border-radius: var(--border-radius-sm);
+      }
     }
 
     .table-header {
@@ -422,12 +566,12 @@
               Shop Status
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="billing.html">
               <i class="bi bi-receipt"></i>
               Billing Performance
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
 
