--- a/billing.html
+++ b/billing.html
@@ -11,7 +11,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
   <style>
     .chart-container {
       background: var(--card-bg);
@@ -830,281 +830,12 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Custom JS -->
-  <script>
-    // Delay Reasons Analysis Chart
-    const delayReasonsCtx = document.getElementById('delayReasonsChart').getContext('2d');
-    new Chart(delayReasonsCtx, {
-      type: 'doughnut',
-      data: {
-        labels: ['Capacity', 'Customer', 'Volume', 'Other'],
-        datasets: [{
-          data: [45, 30, 14, 21],
-          backgroundColor: [
-            '#4f46e5',
-            '#10b981',
-            '#f59e0b',
-            '#6b7280'
-          ],
-          borderWidth: 0,
-          borderRadius: 4
-        }]
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        cutout: '75%',
-        plugins: {
-          legend: {
-            display: false
-          },
-          tooltip: {
-            backgroundColor: 'white',
-            titleColor: '#1e293b',
-            bodyColor: '#1e293b',
-            borderColor: '#e2e8f0',
-            borderWidth: 1,
-            padding: 8,
-            boxPadding: 4,
-            usePointStyle: true,
-            callbacks: {
-              label: function(context) {
-                const value = context.raw;
-                const total = context.dataset.data.reduce((acc, val) => acc + val, 0);
-                const percentage = ((value / total) * 100).toFixed(1);
-                return `${context.label}: ${value} (${percentage}%)`;
-              }
-            }
-          }
-        }
-      }
-    });
-
-    // Customer Timeliness Chart
-    const customerTimelinessCtx = document.getElementById('customerTimelinessChart').getContext('2d');
-    new Chart(customerTimelinessCtx, {
-      type: 'bar',
-      data: {
-        labels: ['Customer1', 'Customer2', 'Customer3', 'Customer4', 'Customer5', 'Customer6', 'Customer7', 'Customer8', 'Customer9', 'Customer10'],
-        datasets: [{
-          label: 'Late',
-          data: [20, 17, 16, 6, 15, 15, 14, 7, 4, 2],
-          backgroundColor: '#f43f5e',
-          borderRadius: 4
-        }, {
-          label: 'On Time',
-          data: [9, 8, 1, 56, 61, 3, 0, 32, 1, 7],
-          backgroundColor: '#10b981',
-          borderRadius: 4
-        }]
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: true,
-        scales: {
-          x: {
-            stacked: true,
-            grid: {
-              display: false
-            }
-          },
-          y: {
-            stacked: true,
-            grid: {
-              color: 'rgba(0, 0, 0, 0.05)'
-            }
-          }
-        },
-        plugins: {
-          legend: {
-            position: 'top',
-            align: 'start',
-            labels: {
-              boxWidth: 12,
-              padding: 15
-            }
-          }
-        }
-      }
-    });
-
-    // Month over Month Timeliness Chart
-    const timelinessCtx = document.getElementById('timelinessChart').getContext('2d');
-    const timelinessChart = new Chart(timelinessCtx, {
-      type: 'line',
-      data: {
-        labels: [
-          'Apr 22', 'May 22', 'Jun 22', 'Jul 22', 'Aug 22', 'Sep 22', 'Oct 22', 'Nov 22',
-          'Feb 23', 'Mar 23', 'Apr 23', 'May 23', 'Jun 23', 'Jul 23', 'Aug 23', 'Sep 23',
-          'Oct 23', 'Nov 23', 'Dec 23', 'Jan 24', 'Feb 24', 'Mar 24', 'Apr 24', 'May 24',
-          'Jun 24', 'Jul 24', 'Aug 24', 'Sep 24', 'Oct 24', 'Nov 24'
-        ],
-        datasets: [{
-          label: 'Monthly Value',
-          data: [91, 23, 11, 9, 52, 12, 18, 6, 15, 8, 77, 4, 113, 17, 56, 26, 49, 30, 4, 64, 25, 97, 107, 62, 66, 86, 90, 105, 75, 50],
-          borderColor: 'rgba(79, 70, 229, 1)',
-          backgroundColor: 'rgba(79, 70, 229, 0.1)',
-          tension: 0.4,
-          fill: true,
-          pointBackgroundColor: '#fff',
-          pointBorderColor: 'rgba(79, 70, 229, 1)',
-          pointBorderWidth: 2,
-          pointRadius: 2,
-          pointHoverRadius: 4,
-          order: 2
-        }, {
-          label: '3-Month Moving Average',
-          data: [null, 41.7, 14.3, 24, 24.3, 27.3, 12, 13, 9.7, 33.3, 29.7, 64.7, 44.7, 62, 33, 43.7, 35, 27.7, 32.7, 31, 62, 88.7, 88.7, 78.3, 71.3, 80.7, 93.7, 90, 76.7, null],
-          borderColor: 'rgba(16, 185, 129, 1)',
-          borderWidth: 2,
-          borderDash: [4, 4],
-          tension: 0.4,
-          fill: false,
-          pointRadius: 0,
-          order: 1
-        }]
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        interaction: {
-          intersect: false,
-          mode: 'index'
-        },
-        scales: {
-          x: {
-            grid: {
-              display: false
-            },
-            ticks: {
-              maxRotation: 45,
-              minRotation: 45,
-              font: {
-                size: 10
-              },
-              color: '#64748b',
-              maxTicksLimit: 12
-            }
-          },
-          y: {
-            grid: {
-              color: 'rgba(0, 0, 0, 0.05)',
-              drawBorder: false
-            },
-            border: {
-              dash: [4, 4]
-            },
-            beginAtZero: true,
-            ticks: {
-              font: {
-                size: 10
-              },
-              color: '#64748b',
-              padding: 6,
-              maxTicksLimit: 6
-            }
-          }
-        },
-        plugins: {
-          legend: {
-            display: false
-          },
-          tooltip: {
-            backgroundColor: 'white',
-            titleColor: '#1e293b',
-            bodyColor: '#1e293b',
-            borderColor: '#e2e8f0',
-            borderWidth: 1,
-            padding: 8,
-            boxPadding: 4,
-            usePointStyle: true,
-            titleFont: {
-              size: 11,
-              weight: '600'
-            },
-            bodyFont: {
-              size: 11
-            },
-            callbacks: {
-              label: function(context) {
-                let label = context.dataset.label || '';
-                if (label) {
-                  label += ': ';
-                }
-                if (context.parsed.y !== null) {
-                  label += context.parsed.y.toFixed(1);
-                }
-                return label;
-              }
-            }
-          }
-        }
-      }
-    });
-
-    // Add sidebar toggle functionality
-    document.querySelector('.header-icon.d-lg-none').addEventListener('click', function() {
-      document.querySelector('.sidebar').classList.toggle('show');
-    });
-
-    // Add new mini charts for summary cards
-    const createMiniChart = (ctx, data, color) => {
-      return new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ['', '', '', '', '', '', ''],
-          datasets: [{
-            data: data,
-            borderColor: color,
-            borderWidth: 2,
-            tension: 0.4,
-            pointRadius: 0,
-            fill: true,
-            backgroundColor: color + '10'
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: {
-            legend: {
-              display: false
-            }
-          },
-          scales: {
-            x: {
-              display: false
-            },
-            y: {
-              display: false
-            }
-          }
-        }
-      });
-    };
-
-    // Initialize mini charts
-    createMiniChart(document.getElementById('invoicesChart').getContext('2d'), 
-      [30, 35, 25, 45, 30, 55, 45], 
-      '#4f46e5'
-    );
-    createMiniChart(document.getElementById('pendingChart').getContext('2d'), 
-      [25, 30, 35, 40, 35, 45, 40], 
-      '#f59e0b'
-    );
-    createMiniChart(document.getElementById('paidChart').getContext('2d'), 
-      [45, 50, 40, 60, 45, 70, 60], 
-      '#10b981'
-    );
-    createMiniChart(document.getElementById('overdueChart').getContext('2d'), 
-      [15, 20, 25, 15, 20, 10, 15], 
-      '#ef4444'
-    );
-  </script>
+  <script src="src/js/script.js"></script>
 </body>
 </html>
 
