--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/components/header.css">
     <link rel="stylesheet" href="src/css/invoice.css">
 </head>
 
