--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMBA Dashboard - Invoice Creation</title>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
@@ -23,43 +27,102 @@
         <span class="logo-text">SMBA</span>
       </div>
 
-      <div class="nav-section">
-        <div class="nav-header">Menu</div>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="bi bi-grid"></i>
-              Overview
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="shop.html">
-              <i class="bi bi-shop"></i>
-              Shop Status
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="invoiceCreation.html">
-              <i class="bi bi-file-text"></i>
-              Invoice Creation
-            </a>
-          </li>
-        </ul>
+      <div class="sidebar-content">
+        <div class="nav-section">
+          <div class="nav-header">
+            Menu
+          </div>
+          <a class="nav-link" href="index.html">
+            <i class="bi bi-grid"></i>
+            <div class="nav-content">
+              <span class="nav-title">Overview</span>
+              <span class="nav-subtitle">Dashboard & Analytics</span>
+            </div>
+          </a>
+          <a class="nav-link" href="shop.html">
+            <i class="bi bi-shop"></i>
+            <div class="nav-content">
+              <span class="nav-title">Shop Status</span>
+              <span class="nav-subtitle">Monitor Shop Performance</span>
+            </div>
+          </a>
+          <a class="nav-link active" href="invoiceCreation.html">
+            <i class="bi bi-file-text"></i>
+            <div class="nav-content">
+              <span class="nav-title">Invoice Creation</span>
+              <span class="nav-subtitle">Create & Manage Invoices</span>
+            </div>
+          </a>
+        </div>
       </div>
 
-      <div class="nav-section mt-auto">
-        <div class="nav-divider"></div>
-        <a href="#" class="logout-button">
-          <i class="bi bi-box-arrow-right"></i>
-          <span>Logout</span>
-        </a>
-      </div>
+      <a href="#" class="logout-button">
+        <i class="bi bi-box-arrow-right"></i>
+        <span>Logout</span>
+      </a>
     </nav>
 
     <!-- Main Content -->
     <main class="main-content">
-      <!-- Include Header Component -->
-      <div id="headerComponent"></div>
+      <!-- Header -->
+      <header class="header">
+        <div class="container-fluid">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-4">
+              <button class="menu-toggle header-icon d-lg-none">
+                <i class="bi bi-list"></i>
+              </button>
+              <div class="page-info">
+                <h1 class="page-title mb-1">Invoice Creation</h1>
+                <div class="breadcrumb">
+                  <span class="breadcrumb-item">Dashboard</span>
+                  <i class="bi bi-chevron-right"></i>
+                  <span class="breadcrumb-item active">Invoice Creation</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="header-actions">
+              <div class="action-group">
+                <button class="header-icon" title="Refresh">
+                  <i class="bi bi-arrow-repeat"></i>
+                  <div class="ripple"></div>
+                </button>
+                <button class="header-icon" title="Notifications">
+                  <i class="bi bi-bell"></i>
+                  <span class="badge">3</span>
+                  <div class="ripple"></div>
+                </button>
+                <button class="header-icon" title="Messages">
+                  <i class="bi bi-chat"></i>
+                  <span class="badge">5</span>
+                  <div class="ripple"></div>
+                </button>
+              </div>
+              <div class="profile-wrapper">
+                <button class="profile-trigger">
+                  <div class="profile-info">
+                    <div class="profile-avatar">
+                      <span class="avatar-text">JD</span>
+                      <span class="status-dot"></span>
+                    </div>
+                    <div class="profile-details">
+                      <span class="profile-name">Jane Doe</span>
+                      <span class="profile-meta">
+                        <i class="bi bi-circle-fill"></i>
+                        Administrator
+                      </span>
+                    </div>
+                  </div>
+                  <div class="profile-action">
+                    <i class="bi bi-chevron-down"></i>
+                  </div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
 
       <!-- Process Container -->
       <div class="process-container">
@@ -294,18 +357,32 @@
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="src/js/header.js"></script>
+  <script src="src/js/script.js"></script>
   <script src="src/js/invoice.js"></script>
+
   <script>
-    // Load header component
-    fetch('src/components/header.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('headerComponent').innerHTML = html;
-        // Initialize header after loading
-        initializeHeader();
-      })
-      .catch(error => console.error('Error loading header:', error));
+    // DOM Ready
+    $(document).ready(function() {
+      // Sidebar Toggle
+      $('.menu-toggle').on('click', function() {
+        $('.sidebar').toggleClass('show');
+      });
+
+      // Close sidebar when clicking outside on mobile
+      $(document).on('click', function(event) {
+        const sidebar = $('.sidebar');
+        const menuToggle = $('.menu-toggle');
+        
+        if (!sidebar.is(event.target) && sidebar.has(event.target).length === 0 &&
+            !menuToggle.is(event.target) && menuToggle.has(event.target).length === 0) {
+          sidebar.removeClass('show');
+        }
+      });
+
+      // Initialize tooltips
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+    });
   </script>
 </body>
 
