--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -28,19 +28,19 @@
       </div>
 
       <div class="sidebar-content">
-        <div class="nav-section">
+      <div class="nav-section">
           <div class="nav-header">
             Menu
           </div>
-          <a class="nav-link" href="index.html">
-            <i class="bi bi-grid"></i>
+            <a class="nav-link" href="index.html">
+              <i class="bi bi-grid"></i>
             <div class="nav-content">
               <span class="nav-title">Overview</span>
               <span class="nav-subtitle">Dashboard & Analytics</span>
             </div>
-          </a>
+            </a>
           <a class="nav-link" href="shop.html">
-            <i class="bi bi-shop"></i>
+              <i class="bi bi-shop"></i>
             <div class="nav-content">
               <span class="nav-title">Shop Status</span>
               <span class="nav-subtitle">Monitor Shop Performance</span>
@@ -51,7 +51,7 @@
             <div class="nav-content">
               <span class="nav-title">Invoice Creation</span>
               <span class="nav-subtitle">Create & Manage Invoices</span>
-            </div>
+          </div>
           </a>
         </div>
       </div>
@@ -66,59 +66,57 @@
     <main class="main-content">
       <!-- Header -->
       <header class="header">
-        <div class="container-fluid">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center gap-4">
-              <button class="menu-toggle header-icon d-lg-none">
-                <i class="bi bi-list"></i>
-              </button>
-              <div class="page-info">
-                <h1 class="page-title mb-1">Invoice Creation</h1>
-                <div class="breadcrumb">
-                  <span class="breadcrumb-item">Dashboard</span>
-                  <i class="bi bi-chevron-right"></i>
-                  <span class="breadcrumb-item active">Invoice Creation</span>
-                </div>
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <div class="d-flex align-items-center gap-4">
+            <button class="menu-toggle header-icon d-lg-none">
+              <i class="bi bi-list"></i>
+            </button>
+            <div class="page-info">
+              <h1 class="page-title mb-1" id="pageTitle">Invoice Creation</h1>
+              <div class="breadcrumb">
+                <span class="breadcrumb-item">Dashboard</span>
+                <i class="bi bi-chevron-right"></i>
+                <span class="breadcrumb-item active" id="currentPage">Invoice Creation</span>
               </div>
             </div>
+          </div>
 
-            <div class="header-actions">
-              <div class="action-group">
-                <button class="header-icon" title="Refresh">
-                  <i class="bi bi-arrow-repeat"></i>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Notifications">
-                  <i class="bi bi-bell"></i>
-                  <span class="badge">3</span>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Messages">
-                  <i class="bi bi-chat"></i>
-                  <span class="badge">5</span>
-                  <div class="ripple"></div>
-                </button>
-              </div>
-              <div class="profile-wrapper">
-                <button class="profile-trigger">
-                  <div class="profile-info">
-                    <div class="profile-avatar">
-                      <span class="avatar-text">JD</span>
-                      <span class="status-dot"></span>
-                    </div>
-                    <div class="profile-details">
-                      <span class="profile-name">Jane Doe</span>
-                      <span class="profile-meta">
-                        <i class="bi bi-circle-fill"></i>
-                        Administrator
-                      </span>
-                    </div>
+          <div class="header-actions">
+            <div class="action-group">
+              <button class="header-icon" title="Refresh">
+                <i class="bi bi-arrow-repeat"></i>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" title="Notifications">
+                <i class="bi bi-bell"></i>
+                <span class="badge">3</span>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" title="Messages">
+                <i class="bi bi-chat"></i>
+                <span class="badge">5</span>
+                <div class="ripple"></div>
+              </button>
+            </div>
+            <div class="profile-wrapper">
+              <button class="profile-trigger">
+                <div class="profile-info">
+                  <div class="profile-avatar">
+                    <span class="avatar-text">JD</span>
+                    <span class="status-dot"></span>
                   </div>
-                  <div class="profile-action">
-                    <i class="bi bi-chevron-down"></i>
+                  <div class="profile-details">
+                    <span class="profile-name">Jane Doe</span>
+                    <span class="profile-meta">
+                      <i class="bi bi-circle-fill"></i>
+                      Administrator
+                    </span>
                   </div>
-                </button>
-              </div>
+                </div>
+                <div class="profile-action">
+                  <i class="bi bi-chevron-down"></i>
+                </div>
+              </button>
             </div>
           </div>
         </div>
@@ -336,8 +334,8 @@
                     <i class="bi bi-check-circle"></i>
                   </button>
                 </div>
-              </div>
-            </div>
+      </div>
+    </div>
           </div>
 
           <div class="content-footer">
@@ -359,29 +357,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="src/js/script.js"></script>
   <script src="src/js/invoice.js"></script>
+  <script src="src/js/header.js"></script>
 
   <script>
-    // DOM Ready
-    $(document).ready(function() {
-      // Sidebar Toggle
-      $('.menu-toggle').on('click', function() {
-        $('.sidebar').toggleClass('show');
-      });
-
-      // Close sidebar when clicking outside on mobile
-      $(document).on('click', function(event) {
-        const sidebar = $('.sidebar');
-        const menuToggle = $('.menu-toggle');
-        
-        if (!sidebar.is(event.target) && sidebar.has(event.target).length === 0 &&
-            !menuToggle.is(event.target) && menuToggle.has(event.target).length === 0) {
-          sidebar.removeClass('show');
-        }
-      });
-
+    document.addEventListener('DOMContentLoaded', () => {
       // Initialize tooltips
-      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+      const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+      tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl);
+      });
+
+      // Update page info
+      updatePageInfo('invoiceCreation');
     });
   </script>
 </body>
