--- a/index.html
+++ b/index.html
@@ -17,8 +17,152 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="src/css/styles.css">
-  <link rel="stylesheet" href="src/css/invoice.css">
+  <link rel="stylesheet" href="src/css/main.css">
+  <style>
+    /* Summary Cards Styles */
+    .summary-cards {
+      margin-top: 1rem;
+    }
+
+    .summary-card {
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: var(--compact-border-radius);
+      padding: 1rem;
+      display: flex;
+      align-items: flex-start;
+      gap: 1rem;
+      transition: var(--hover-transition);
+      height: 100%;
+    }
+
+    .summary-card:hover {
+      transform: translateY(-2px);
+      box-shadow: var(--card-shadow-hover);
+    }
+
+    .summary-icon {
+      width: 32px;
+      height: 32px;
+      border-radius: 6px;
+      background: var(--primary-color);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1rem;
+      flex-shrink: 0;
+    }
+
+    .summary-icon.warning {
+      background: #f59e0b;
+    }
+
+    .summary-icon.success {
+      background: #10b981;
+    }
+
+    .summary-icon.danger {
+      background: #ef4444;
+    }
+
+    .summary-info {
+      flex: 1;
+      min-width: 0;
+    }
+
+    .summary-label {
+      font-size: 0.75rem;
+      color: var(--text-secondary);
+      margin-bottom: 0.25rem;
+      font-weight: 500;
+    }
+
+    .summary-value {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: var(--text-primary);
+      font-family: 'Roboto Mono', monospace;
+      line-height: 1;
+      margin-bottom: 0.75rem;
+    }
+
+    .summary-meta {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 0.75rem;
+      padding: 0.5rem;
+      background: var(--background-color);
+      border-radius: 4px;
+    }
+
+    .meta-item {
+      display: flex;
+      flex-direction: column;
+      gap: 0.125rem;
+    }
+
+    .meta-value {
+      font-size: 0.875rem;
+      color: var(--text-primary);
+      font-weight: 600;
+      font-family: 'Roboto Mono', monospace;
+      line-height: 1;
+    }
+
+    .meta-label {
+      font-size: 0.688rem;
+      color: var(--text-secondary);
+      font-weight: 500;
+    }
+
+    .summary-trend {
+      font-size: 0.75rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.25rem;
+      padding: 0.25rem 0.5rem;
+      border-radius: 4px;
+      font-weight: 500;
+      line-height: 1;
+    }
+
+    .summary-trend.positive {
+      color: #10b981;
+      background: rgba(16, 185, 129, 0.1);
+    }
+
+    .summary-trend.negative {
+      color: #ef4444;
+      background: rgba(239, 68, 68, 0.1);
+    }
+
+    @media (max-width: 768px) {
+      .summary-card {
+        padding: 0.75rem;
+        gap: 0.75rem;
+      }
+
+      .summary-icon {
+        width: 28px;
+        height: 28px;
+        font-size: 0.875rem;
+      }
+
+      .summary-value {
+        font-size: 1.125rem;
+      }
+
+      .summary-meta {
+        padding: 0.375rem;
+        gap: 0.75rem;
+      }
+
+      .meta-value {
+        font-size: 0.813rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="wrapper">
@@ -59,7 +203,7 @@
 
       <a href="#" class="logout-button">
         <i class="bi bi-box-arrow-right"></i>
-        <span>Logout</span>
+        <span>Sign Out</span>
       </a>
     </nav>
 
@@ -67,59 +211,55 @@
     <main class="main-content">
       <!-- Header -->
       <header class="header">
-        <div class="container-fluid">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center gap-4">
-              <button class="menu-toggle header-icon d-lg-none">
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <div class="d-flex align-items-center gap-4">
+            <button class="menu-toggle header-icon d-lg-none">
               <i class="bi bi-list"></i>
             </button>
-              <div class="page-info">
-                <h1 class="page-title mb-1">Dashboard</h1>
-                <div class="breadcrumb">
-                  <span class="breadcrumb-item">Dashboard</span>
-                  <i class="bi bi-chevron-right"></i>
-                  <span class="breadcrumb-item active">Overview</span>
-                </div>
-              </div>
+            <div class="page-info">
+              <h1 class="page-title mb-1" id="pageTitle">Overview</h1>
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item">Dashboard</li>
+                  <li class="breadcrumb-item active" id="currentPage">Overview</li>
+                </ol>
+              </nav>
+            </div>
           </div>
 
           <div class="header-actions">
-              <div class="action-group">
-                <button class="header-icon" title="Refresh">
-                  <i class="bi bi-arrow-repeat"></i>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Notifications">
-                  <i class="bi bi-bell"></i>
-                  <span class="badge">3</span>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Messages">
-                  <i class="bi bi-chat"></i>
-                  <span class="badge">5</span>
-                  <div class="ripple"></div>
-            </button>
-              </div>
-              <div class="profile-wrapper">
-                <button class="profile-trigger">
-                  <div class="profile-info">
-                    <div class="profile-avatar">
-                      <span class="avatar-text">JD</span>
-                      <span class="status-dot"></span>
-                    </div>
-                    <div class="profile-details">
-                      <span class="profile-name">Jane Doe</span>
-                      <span class="profile-meta">
-                        <i class="bi bi-circle-fill"></i>
-                        Administrator
-                      </span>
-                    </div>
+            <div class="action-group">
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Refresh">
+                <i class="bi bi-arrow-repeat"></i>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Notifications">
+                <i class="bi bi-bell"></i>
+                <span class="badge">3</span>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Messages">
+                <i class="bi bi-chat"></i>
+                <span class="badge">5</span>
+                <div class="ripple"></div>
+              </button>
+            </div>
+            <div class="profile-wrapper">
+              <button class="profile-trigger" data-bs-toggle="dropdown">
+                <div class="profile-info">
+                  <div class="profile-avatar">
+                    <span class="avatar-text">JD</span>
+                    <span class="status-dot"></span>
                   </div>
-                  <div class="profile-action">
-                    <i class="bi bi-chevron-down"></i>
+                  <div class="profile-details d-none d-sm-flex">
+                    <span class="profile-name">Jane Doe</span>
+                    <span class="profile-role">Administrator</span>
                   </div>
-            </button>
-              </div>
+                </div>
+                <div class="profile-action">
+                  <i class="bi bi-chevron-down"></i>
+                </div>
+              </button>
             </div>
           </div>
         </div>
@@ -127,25 +267,32 @@
 
       <!-- Dashboard Content -->
       <div class="content">
-        <!-- Quick Stats -->
-  
-        <div class="summary-cards">
+        <!-- Summary Cards -->
+        <div class="summary-cards mb-3">
           <div class="row g-2">
             <div class="col-xl-3 col-md-6">
               <div class="summary-card">
                 <div class="summary-icon">
-                  <i class="bi bi-receipt-cutoff"></i>
-            </div>
+                  <i class="bi bi-shop"></i>
+                </div>
                 <div class="summary-info">
-                  <div class="summary-label">Invoices</div>
-                  <div class="summary-value">2,845</div>
+                  <div class="summary-label">Active Shops</div>
+                  <div class="summary-value">24</div>
+                  <div class="summary-meta">
+                    <div class="meta-item">
+                      <span class="meta-value">20</span>
+                      <span class="meta-label">Operational</span>
+                    </div>
+                    <div class="meta-item">
+                      <span class="meta-value">4</span>
+                      <span class="meta-label">Maintenance</span>
+                    </div>
+                  </div>
                   <div class="summary-trend positive">
-                    +8.2% <span class="trend-period">vs prev</span>
-          </div>
-        </div>
-                <div class="summary-chart">
-                  <canvas id="invoicesChart"></canvas>
-            </div>
+                    <i class="bi bi-arrow-up-right"></i>
+                    +12.5%
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-xl-3 col-md-6">
@@ -154,15 +301,23 @@
                   <i class="bi bi-clock-history"></i>
                 </div>
                 <div class="summary-info">
-                  <div class="summary-label">Pending</div>
-                  <div class="summary-value">$45.2k</div>
+                  <div class="summary-label">Avg. TAT</div>
+                  <div class="summary-value">45.2d</div>
+                  <div class="summary-meta">
+                    <div class="meta-item">
+                      <span class="meta-value">32d</span>
+                      <span class="meta-label">Min</span>
+                    </div>
+                    <div class="meta-item">
+                      <span class="meta-value">58d</span>
+                      <span class="meta-label">Max</span>
+                    </div>
+                  </div>
                   <div class="summary-trend negative">
-                    +12.5% <span class="trend-period">vs prev</span>
-            </div>
-          </div>
-                <div class="summary-chart">
-                  <canvas id="pendingBillingChart"></canvas>
-            </div>
+                    <i class="bi bi-arrow-up-right"></i>
+                    +5.3%
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-xl-3 col-md-6">
@@ -171,15 +326,23 @@
                   <i class="bi bi-check-circle"></i>
                 </div>
                 <div class="summary-info">
-                  <div class="summary-label">Paid</div>
-                  <div class="summary-value">$124.5k</div>
+                  <div class="summary-label">On-Time</div>
+                  <div class="summary-value">89.5%</div>
+                  <div class="summary-meta">
+                    <div class="meta-item">
+                      <span class="meta-value">92%</span>
+                      <span class="meta-label">Last Week</span>
+                    </div>
+                    <div class="meta-item">
+                      <span class="meta-value">85%</span>
+                      <span class="meta-label">Target</span>
+                    </div>
+                  </div>
                   <div class="summary-trend positive">
-                    +15.8% <span class="trend-period">vs prev</span>
-            </div>
-          </div>
-                <div class="summary-chart">
-                  <canvas id="paidBillingChart"></canvas>
-            </div>
+                    <i class="bi bi-arrow-up-right"></i>
+                    +2.1%
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-xl-3 col-md-6">
@@ -188,15 +351,23 @@
                   <i class="bi bi-exclamation-circle"></i>
                 </div>
                 <div class="summary-info">
-                  <div class="summary-label">Overdue</div>
-                  <div class="summary-value">$12.4k</div>
+                  <div class="summary-label">Delayed</div>
+                  <div class="summary-value">10.5%</div>
+                  <div class="summary-meta">
+                    <div class="meta-item">
+                      <span class="meta-value">3</span>
+                      <span class="meta-label">Critical</span>
+                    </div>
+                    <div class="meta-item">
+                      <span class="meta-value">5d</span>
+                      <span class="meta-label">Avg Delay</span>
+                    </div>
+                  </div>
                   <div class="summary-trend negative">
-                    -2.5% <span class="trend-period">vs prev</span>
-            </div>
-          </div>
-                <div class="summary-chart">
-                  <canvas id="overdueBillingChart"></canvas>
-            </div>
+                    <i class="bi bi-arrow-down-right"></i>
+                    -1.2%
+                  </div>
+                </div>
               </div>
             </div>
           </div>
