--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -14,9 +14,149 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/components/header.css">
-    <link rel="stylesheet" href="src/css/invoice.css">
+  <link rel="stylesheet" href="src/css/main.css">
+  <style>
+    /* Collapsible Panel Styles */
+    .section-container {
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: var(--compact-border-radius);
+      margin-bottom: 1rem;
+      overflow: hidden;
+    }
+
+    .section-header {
+      padding: var(--compact-padding);
+      background: var(--background-color);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    .section-header:hover {
+      background: var(--hover-bg);
+    }
+
+    .section-title {
+      margin: 0;
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--text-primary);
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .section-title i {
+      color: var(--primary-color);
+      font-size: 1.125rem;
+    }
+
+    .section-content {
+      padding: var(--compact-padding);
+      border-top: 1px solid var(--border-color);
+      display: block;
+      max-height: 1000px;
+      opacity: 1;
+      overflow: hidden;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .section-header.collapsed + .section-content {
+      max-height: 0;
+      opacity: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    .collapse-icon {
+      color: var(--text-secondary);
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .section-header.collapsed .collapse-icon {
+      transform: rotate(180deg);
+    }
+
+    /* Contract Grid Styles */
+    .contract-grid,
+    .summary-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+    }
+
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .input-label {
+      font-size: 0.875rem;
+      color: var(--text-secondary);
+      font-weight: 500;
+    }
+
+    .input-value {
+      font-size: 1.125rem;
+      color: var(--text-primary);
+      font-weight: 600;
+      font-family: 'Roboto Mono', monospace;
+    }
+
+    .input-value div {
+      font-size: 0.875rem;
+      margin-top: 0.25rem;
+      color: var(--text-secondary);
+    }
+
+    /* Table Styles */
+    .table-container {
+      overflow-x: auto;
+      margin: 0 -1rem;
+      padding: 0 1rem;
+    }
+
+    .billing-table {
+      width: 100%;
+      border-collapse: separate;
+      border-spacing: 0;
+    }
+
+    .billing-table th,
+    .billing-table td {
+      padding: 0.75rem;
+      border-bottom: 1px solid var(--border-color);
+      font-size: 0.875rem;
+    }
+
+    .billing-table th {
+      font-weight: 600;
+      color: var(--text-primary);
+      background: var(--background-color);
+      text-align: left;
+    }
+
+    .billing-table td {
+      color: var(--text-secondary);
+    }
+
+    .billing-table .amount-column {
+      font-family: 'Roboto Mono', monospace;
+      text-align: right;
+      font-weight: 500;
+      color: var(--text-primary);
+    }
+
+    .billing-table tfoot td {
+      font-weight: 600;
+      color: var(--text-primary);
+      background: var(--background-color);
+    }
+  </style>
 </head>
 
 <body>
@@ -58,7 +198,7 @@
 
       <a href="#" class="logout-button">
         <i class="bi bi-box-arrow-right"></i>
-        <span>Logout</span>
+        <span>Sign Out</span>
       </a>
     </nav>
 
@@ -161,7 +301,7 @@
               <div class="billing-sections">
                 <!-- Contract Summary Section -->
                 <div class="section-container">
-                  <div class="section-header" onclick="toggleSection(this)">
+                  <div class="section-header">
                     <h3 class="section-title">
                       <i class="bi bi-file-earmark-text"></i>
                       Contract Summary
@@ -192,7 +332,7 @@
 
                 <!-- SV Summary Section -->
                 <div class="section-container">
-                  <div class="section-header" onclick="toggleSection(this)">
+                  <div class="section-header">
                     <h3 class="section-title">
                       <i class="bi bi-list-check"></i>
                       SV Summary
@@ -215,7 +355,7 @@
 
                 <!-- Billing Receipt Section -->
                 <div class="section-container">
-                  <div class="section-header" onclick="toggleSection(this)">
+                  <div class="section-header">
                     <h3 class="section-title">
                       <i class="bi bi-receipt"></i>
                       Billing Receipt
@@ -367,6 +507,38 @@
 
       // Update page info
       updatePageInfo('invoiceCreation');
+
+      // Initialize collapsible sections
+      const sectionHeaders = document.querySelectorAll('.section-header');
+      sectionHeaders.forEach(header => {
+        // Add click event listener
+        header.addEventListener('click', () => {
+          // Toggle collapsed class
+          header.classList.toggle('collapsed');
+          
+          // Get the content section
+          const content = header.nextElementSibling;
+          
+          // Toggle content visibility with animation
+          if (header.classList.contains('collapsed')) {
+            content.style.maxHeight = '0';
+            content.style.opacity = '0';
+            content.style.paddingTop = '0';
+            content.style.paddingBottom = '0';
+            setTimeout(() => {
+              content.style.display = 'none';
+            }, 200);
+          } else {
+            content.style.display = 'block';
+            setTimeout(() => {
+              content.style.maxHeight = content.scrollHeight + 'px';
+              content.style.opacity = '1';
+              content.style.paddingTop = 'var(--compact-padding)';
+              content.style.paddingBottom = 'var(--compact-padding)';
+            }, 10);
+          }
+        });
+      });
     });
   </script>
 </body>
