--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="src/css/invoice.css">
   <style>
     /* Update border styles */
@@ -595,59 +595,55 @@
     <main class="main-content">
       <!-- Header -->
       <header class="header">
-        <div class="container-fluid">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center gap-4">
-              <button class="menu-toggle header-icon d-lg-none">
-                <i class="bi bi-list"></i>
-              </button>
-              <div class="page-info">
-                <h1 class="page-title mb-1">Shop Status</h1>
-                <div class="breadcrumb">
-                  <span class="breadcrumb-item">Dashboard</span>
-                  <i class="bi bi-chevron-right"></i>
-                  <span class="breadcrumb-item active">Shop Status</span>
-                </div>
-              </div>
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <div class="d-flex align-items-center gap-4">
+            <button class="menu-toggle header-icon d-lg-none">
+              <i class="bi bi-list"></i>
+            </button>
+            <div class="page-info">
+              <h1 class="page-title mb-1" id="pageTitle">Shop Status</h1>
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item">Dashboard</li>
+                  <li class="breadcrumb-item active" id="currentPage">Shop Status</li>
+                </ol>
+              </nav>
             </div>
+          </div>
 
-            <div class="header-actions">
-              <div class="action-group">
-                <button class="header-icon" title="Refresh">
-                  <i class="bi bi-arrow-repeat"></i>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Notifications">
-                  <i class="bi bi-bell"></i>
-                  <span class="badge">3</span>
-                  <div class="ripple"></div>
-                </button>
-                <button class="header-icon" title="Messages">
-                  <i class="bi bi-chat"></i>
-                  <span class="badge">5</span>
-                  <div class="ripple"></div>
-                </button>
-              </div>
-              <div class="profile-wrapper">
-                <button class="profile-trigger">
-                  <div class="profile-info">
-                    <div class="profile-avatar">
-                      <span class="avatar-text">JD</span>
-                      <span class="status-dot"></span>
-                    </div>
-                    <div class="profile-details">
-                      <span class="profile-name">Jane Doe</span>
-                      <span class="profile-meta">
-                        <i class="bi bi-circle-fill"></i>
-                        Administrator
-                      </span>
-                    </div>
+          <div class="header-actions">
+            <div class="action-group">
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Refresh">
+                <i class="bi bi-arrow-repeat"></i>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Notifications">
+                <i class="bi bi-bell"></i>
+                <span class="badge">3</span>
+                <div class="ripple"></div>
+              </button>
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Messages">
+                <i class="bi bi-chat"></i>
+                <span class="badge">5</span>
+                <div class="ripple"></div>
+              </button>
+            </div>
+            <div class="profile-wrapper">
+              <button class="profile-trigger" data-bs-toggle="dropdown">
+                <div class="profile-info">
+                  <div class="profile-avatar">
+                    <span class="avatar-text">JD</span>
+                    <span class="status-dot"></span>
                   </div>
-                  <div class="profile-action">
-                    <i class="bi bi-chevron-down"></i>
+                  <div class="profile-details d-none d-sm-flex">
+                    <span class="profile-name">Jane Doe</span>
+                    <span class="profile-role">Administrator</span>
                   </div>
-                </button>
-              </div>
+                </div>
+                <div class="profile-action">
+                  <i class="bi bi-chevron-down"></i>
+                </div>
+              </button>
             </div>
           </div>
         </div>
