Refactor index.html, invoiceCreation.html, and shop.html to streamline CSS integration by replacing inline styles with dedicated stylesheets. Introduce new styles in index.css, invoice.css, and shop.css for improved layout, responsiveness, and visual consistency across the application. Enhance user interaction elements and optimize table structures for better usability.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -15,148 +15,7 @@
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/main.css">
-  <style>
-    /* Collapsible Panel Styles */
-    .section-container {
-      background: var(--card-bg);
-      border: 1px solid var(--border-color);
-      border-radius: var(--compact-border-radius);
-      margin-bottom: 1rem;
-      overflow: hidden;
-    }
-
-    .section-header {
-      padding: var(--compact-padding);
-      background: var(--background-color);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      transition: background-color 0.2s ease;
-      }
-
-    .section-header:hover {
-      background: var(--hover-bg);
-    }
-
-    .section-title {
-      margin: 0;
-      font-size: 1rem;
-      font-weight: 600;
-      color: var(--text-primary);
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .section-title i {
-      color: var(--primary-color);
-      font-size: 1.125rem;
-    }
-
-    .section-content {
-      padding: var(--compact-padding);
-      border-top: 1px solid var(--border-color);
-      display: block;
-      max-height: 1000px;
-      opacity: 1;
-      overflow: hidden;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .section-header.collapsed + .section-content {
-      max-height: 0;
-      opacity: 0;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-
-    .collapse-icon {
-      color: var(--text-secondary);
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .section-header.collapsed .collapse-icon {
-      transform: rotate(180deg);
-    }
-
-    /* Contract Grid Styles */
-    .contract-grid,
-    .summary-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
-    }
-
-    .input-group {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-
-    .input-label {
-      font-size: 0.875rem;
-      color: var(--text-secondary);
-      font-weight: 500;
-    }
-
-    .input-value {
-      font-size: 1.125rem;
-      color: var(--text-primary);
-      font-weight: 600;
-      font-family: 'Roboto Mono', monospace;
-    }
-
-    .input-value div {
-      font-size: 0.875rem;
-      margin-top: 0.25rem;
-      color: var(--text-secondary);
-    }
-
-    /* Table Styles */
-    .table-container {
-      overflow-x: auto;
-      margin: 0 -1rem;
-      padding: 0 1rem;
-    }
-
-    .billing-table {
-      width: 100%;
-      border-collapse: separate;
-      border-spacing: 0;
-    }
-
-    .billing-table th,
-    .billing-table td {
-      padding: 0.75rem;
-      border-bottom: 1px solid var(--border-color);
-      font-size: 0.875rem;
-    }
-
-    .billing-table th {
-      font-weight: 600;
-      color: var(--text-primary);
-      background: var(--background-color);
-      text-align: left;
-    }
-
-    .billing-table td {
-      color: var(--text-secondary);
-    }
-
-    .billing-table .amount-column {
-      font-family: 'Roboto Mono', monospace;
-      text-align: right;
-      font-weight: 500;
-      color: var(--text-primary);
-    }
-
-    .billing-table tfoot td {
-      font-weight: 600;
-      color: var(--text-primary);
-      background: var(--background-color);
-    }
-  </style>
+  <link rel="stylesheet" href="src/css/invoice.css">
 </head>
 
 <body>
