Enhance logo design and sidebar styling across index.html, invoiceCreation.html, and shop.html. Update main.css to improve layout, responsiveness, and visual appeal, including new styles for logo elements and navigation links. Introduce version display and responsive adjustments for better user experience on various screen sizes.

--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,16 @@
     <!-- Sidebar -->
     <nav class="sidebar">
       <div class="logo">
-        <span class="logo-text">SMBA</span>
+        <div class="logo-content">
+          <div class="logo-icon">
+            <i class="bi bi-building"></i>
+          </div>
+          <div class="logo-text">
+            <span class="primary">SMBA</span>
+            <span class="secondary">Dashboard</span>
+          </div>
+        </div>
+        <span class="logo-version">v1.0.0</span>
       </div>
 
       <div class="sidebar-content">
