Update index.html to reflect changes in active shop and queue counts. Modify button labels for improved clarity, replacing "All Shops" with "My Queue" and adjusting the corresponding view counts. Update "Pending" button to "Overall Queue" with a new count, enhancing user experience and interface consistency.

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </h2>
                 <div class="table-badge">
                   <i class="bi bi-buildings"></i>
-                  27 Active Shops
+                  4 Active Shops
                 </div>
               </div>
               <div class="d-flex align-items-center gap-2">
@@ -487,16 +487,16 @@
               <div class="view-options">
                 <div class="btn-group">
                   <button class="view-btn active" data-view="all">
-                    All Shops
-                    <span class="view-count">27</span>
+                    My Queue
+                    <span class="view-count">1</span>
                   </button>
-                  <button class="view-btn" data-view="critical">
+                  <!-- <button class="view-btn" data-view="critical">
                     Critical
                     <span class="view-count">5</span>
-                  </button>
+                  </button> -->
                   <button class="view-btn" data-view="pending">
-                    Pending
-                    <span class="view-count">12</span>
+                    Overall Queue
+                    <span class="view-count">4</span>
                   </button>
                 </div>
               </div>
